Fix qrc sources for QWebEngineScript

Fixes: QTBUG-96525
Change-Id: I39d6247c0dd0e55e4fb91b176f34e676eeabbcdd
Reviewed-by: Michal Klocek <michal.klocek@qt.io>
(cherry picked from commit ce2d6a94ce99f8d6f82fbcbf45603f8eb7a92957)
Reviewed-by: Allan Sandfeld Jensen <allan.jensen@qt.io>